Css/style.css
* {
            margin: 0;
            padding: 0;
            box-sizing: border-box;
        }
        html{
            height: 100%;
        }

        a{
            text-decoration: none;
            outline: none;
        }
        button{
            outline: none;
        }

        ::-webkit-scrollbar{
            display: none;
        }
        body {
            font-family: 'Roboto';
            background: transparent linear-gradient(180deg, #FFFFFF 0%, #eef6ff 100%) 0% 0% no-repeat padding-box;
            background-repeat: repeat-y;
            background-attachment: fixed;
            /* background-repeat: no-repeat; */
            background-size: cover;
            height: 100%;
            width: 100%;
            min-height: 100vh;
            display: flex;
            flex-direction: column;
            align-items: center;
        }
        img{
            width: 100%;
        }

        /* .mySlider img { 
            width: 150px;
        } */

        svg{
            width: 100%;
        }

        .mySlider img {
            width: auto;
            /* max-width: 150px; */
            height: auto;
            display: block;
            margin: 0 auto;
        }

        .content{
            width: 100%;
            height: 100%;
            min-height: fit-content;
            display: flex;
            flex-direction: column;
            align-items: center;
            position: relative;
        }

        .cardbgcolorblock{
            width:100%;
            height: 100%;
            position: fixed;
            top: 0;
            overflow: hidden;
            z-index: -2;
            background-color: #eef6ff;
        }
        .cardbgcolorblock::after {
            content: "";
            position: absolute;
            inset: 0;
            height: 100%;
            width: 100%;
            background-image: url(../Assets/Pattern_Bg.svg);
            opacity: 0.08; 
            pointer-events: none;
            top: 0;
        }
        /* .card-bg-img{
            position: fixed;
            right: 0;
            bottom: 0;
            z-index: -1;
        } */


        .card-section{
            flex: 1;
            width: 100%;
            display: flex;
            align-items: center;
            justify-content: center;
            padding: 0px 20px 50px 20px;
        }

        .card-parent{
            padding-top: 30px;
        }


        .card-section.preview{
            width: 100%;
            height: 100%;
            position: fixed;
            top: -9999px;
            background-color: rgba(0, 0, 0, 0.5);
            z-index: 2;
            padding-bottom: 0;
        }
        .card-section.preview .card{
            width: 450px;
            border-radius: 20px;
            border: none;
            /* padding-top: 60px; */
        }

        .card-logo {
            position: absolute;
            width: 265px;
            display: flex;
            /* align-self: center; */
            /* justify-self: center; */
            left: 0;
            right: 0;
            top: -35px;
            margin: auto;
        }

        .ClosebtnBlock{
            position: absolute;
            right: 10px;
            top: 10px;
            z-index: 1;
            cursor: pointer;
        }


        .card-section.preview .card-header {
            /* height: 210px; */
            position: relative;
            /* aspect-ratio: 25 / 8; */
            width: 100%;
            /* background-size: cover; */
            /* background-repeat: no-repeat; */
            /* background-color: #261604; */
            display: flex;
            flex-direction: column;
            align-items: center;
        }
        .card-section.preview  .card-body {
            padding: 0px 30px 0 30px;       
        }
        .card-section.preview .qrcode{ 
            display: flex;
            justify-content: center;
            align-items: center;
            border-top: 0.5px solid rgba(112, 112, 112, 0.5);
            padding: 20px 0;
        }
        .bg-container{ 
            width: 100%;
            min-height: 120px;
            position: relative;
        }
        .bg-container img{
            position: absolute;
            /* width: 100%; */
            bottom: 0;
            left: 0;
        }
        .card {
            background: white;
            box-shadow: 0px 0px 15px #0000001F;
            /* border: 0.1px solid rgba(0,0,0,0.1); */
            border-radius: 20px;
            /* overflow: hidden; */
            width: 500px;
            transition: transform 0.3s ease, box-shadow 0.3s ease;
            position: relative;
        }
        .card-header {
            /* height: 440px; */
            position: relative;
            overflow: hidden;
            border-radius: 20px 20px 0 0;
        }

        #banner-image-main,
        .card-banner img {
            display: block;
            width: 100%;
            aspect-ratio: 500 / 210;
            object-fit: cover;
            object-position: center 58%;
        }

        .profile-border{
            width: 80%;
            height: 1px;
            display: flex;
            justify-self: center;
            border-bottom: 0.5px solid rgba(0,0,0,0.1);
        }

        .profile-imagemaincontainer{
            width: 100%;
            position: absolute;
            bottom: -90px;
            left: 0px;
            display: flex;
            flex-direction: column;
            align-items: flex-end;
            justify-content: flex-start;
            /* padding-left: 20px; */
            padding: 0 30px;
            z-index: 1;
        }
/* ... */

